fixed wrong value assigned to feature_flag_name

--- a/celantur-arcgis-example-v1.ipynb
+++ b/celantur-arcgis-example-v1.ipynb
@@ -110,7 +110,7 @@
     "    print(\"Processing started...\")\n",
     "    \n",
     "    supported_content_types = (\"image/jpeg\", \"image/png\")\n",
-    "    feature_flag_name = \"new_anonymized\"\n",
+    "    feature_flag_name = \"is_anonymized\"\n",
     "    \n",
     "    layer = gis.content.get(layer_id).layers[0]\n",
     "\n",
