Add ArcGIS Pro Geoprocessing Tool
- Restructure files
- Update READMEs
- Automatically trim whitespaces (VS Code)

--- a/jupyter-notebook/celantur-arcgis-example-v1.ipynb
+++ b/jupyter-notebook/celantur-arcgis-example-v1.ipynb
@@ -2,57 +2,62 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "## ArcGIS and Celantur Fusion POC"
-   ],
+   "id": "6323dcd641a4769b",
    "metadata": {
     "collapsed": false
    },
-   "id": "6323dcd641a4769b"
+   "source": [
+    "## ArcGIS and Celantur Fusion POC"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "#### ! CREDENTIALS !"
-   ],
+   "id": "8255de57ce9b7a2a",
    "metadata": {
     "collapsed": false
    },
-   "id": "8255de57ce9b7a2a"
+   "source": [
+    "#### ! CREDENTIALS !"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "initial_id",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "username = \"****@celantur.com\"\n",
     "password = \"****\""
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "initial_id"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "#### Celantur Preparation"
-   ],
+   "id": "8e64349e869589a8",
    "metadata": {
     "collapsed": false
    },
-   "id": "8e64349e869589a8"
+   "source": [
+    "#### Celantur Preparation"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "676d8f21cd04b01f",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "\n",
     "from os.path import basename\n",
     "from time import sleep\n",
-    "\n",
+    "import tempfile\n",
     "import requests\n",
+    "\n",
     "\n",
     "host = \"https://api.celantur.com/v2\"\n",
     "\n",
@@ -102,44 +107,44 @@
     "        with open(final_name, \"wb\") as fd:\n",
     "            fd.write(response.content)\n",
     "        anon_files[\"tid\"] = final_name\n",
-    "    \n",
+    "\n",
     "    return anon_files\n",
     "\n",
     "\n",
     "def celantur_process_layer(layer_id, params):\n",
     "    print(\"Processing started...\")\n",
-    "    \n",
+    "\n",
     "    supported_content_types = (\"image/jpeg\", \"image/png\")\n",
     "    feature_flag_name = \"is_anonymized\"\n",
-    "    \n",
+    "\n",
     "    layer = gis.content.get(layer_id).layers[0]\n",
     "\n",
     "    available_attachments = layer.attachments.search()\n",
     "\n",
     "    for attachment_object in available_attachments:\n",
-    "        \n",
+    "\n",
     "        featureset_id = attachment_object[\"PARENTOBJECTID\"]\n",
     "        attachment_content_type = attachment_object[\"CONTENTTYPE\"]\n",
-    "        \n",
+    "\n",
     "        if attachment_content_type in supported_content_types:\n",
     "            featureset = layer.query(where=f\"OBJECTID={featureset_id}\")\n",
-    "            \n",
+    "\n",
     "            if not featureset:\n",
     "                continue\n",
-    "            \n",
+    "\n",
     "            all_features = featureset.features\n",
     "            feature = all_features[0]\n",
-    "            \n",
+    "\n",
     "            is_anonymized = feature.attributes[feature_flag_name]\n",
-    "            \n",
+    "\n",
     "            if not is_anonymized:\n",
     "                print(f\"Anonymizing {attachment_object}\\n\")\n",
     "                local_path = layer.attachments.download(oid=featureset_id, attachment_id=attachment_object[\"ID\"])\n",
     "                local_path = local_path[0]\n",
-    "                \n",
+    "\n",
     "                headers = celantur_connect(username, password)\n",
     "                tasks = celantur_anonymize_start(headers, params, local_path)\n",
-    "                anon_files = celantur_anonymize_finish(headers, tasks, \"/arcgis/home/downloads\")\n",
+    "                anon_files = celantur_anonymize_finish(headers, tasks, tempfile.gettempdir())\n",
     "\n",
     "                for anon_file in anon_files.values():\n",
     "                    layer.attachments.add(featureset_id, anon_file)\n",
@@ -149,27 +154,27 @@
     "                print(f\"Skipping (already anonymized) {attachment_object}\\n\")\n",
     "        else:\n",
     "            print(f\"Skipping (non-image) {attachment_object}\\n\")\n",
-    "    \n",
+    "\n",
     "    print(\"Processing Finished!\")\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "676d8f21cd04b01f"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "#### Main"
-   ],
+   "id": "9afa62c50c5c56d6",
    "metadata": {
     "collapsed": false
    },
-   "id": "9afa62c50c5c56d6"
+   "source": [
+    "#### Main"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7b6ed2064fb35e7f",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from arcgis.gis import GIS\n",
@@ -177,22 +182,18 @@
     "\n",
     "# Adjust important params\n",
     "celantur_process_layer(\n",
-    "    \n",
+    "\n",
     "    # Type: Feature Service\n",
     "    layer_id=\"3374217d28904bf8a538ae9b4ebe93a4\",\n",
-    "    \n",
+    "\n",
     "    params={\n",
     "        \"anonymization_method\": \"blur\",\n",
     "        \"face\": True,\n",
     "        \"license-plate\": True,\n",
     "    }\n",
-    "    \n",
+    "\n",
     ")"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "7b6ed2064fb35e7f"
+   ]
   }
  ],
  "metadata": {
